--- a/src/ui/taskWindow.fxml
+++ b/src/ui/taskWindow.fxml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.*?>
 <GridPane xmlns="http://javafx.com/javafx"
           xmlns:fx="http://javafx.com/fxml"
-          fx:controller="UI.taskWindowController"
+          fx:controller="ui.taskWindowController"
           prefHeight="200" prefWidth="320"
           alignment="center" hgap="10" vgap="10">
     <columnConstraints>
