--- a/src/ui/backlogWindow.fxml
+++ b/src/ui/backlogWindow.fxml
@@ -1,5 +1,4 @@
 <?import javafx.scene.control.*?>
-<?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <GridPane fx:controller="ui.backlogWindowController"
@@ -7,72 +6,56 @@
           prefHeight="200" prefWidth="320"
           alignment="center" hgap="10" vgap="10">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="60" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="40" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="60"/>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="40"/>
     </columnConstraints>
     <rowConstraints>
         <RowConstraints minHeight="10.0" vgrow="SOMETIMES" percentHeight="5"/>
         <RowConstraints minHeight="10.0" vgrow="SOMETIMES" percentHeight="10"/>
-        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" percentHeight="40" />
         <RowConstraints minHeight="10.0" vgrow="SOMETIMES" percentHeight="40"/>
-        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" percentHeight="5" />
+        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" percentHeight="40"/>
+        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" percentHeight="5"/>
     </rowConstraints>
     <children>
-        <HBox spacing="5" alignment="CENTER_LEFT"  GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.columnSpan="12">
+        <HBox spacing="5" alignment="CENTER_LEFT" GridPane.columnIndex="0" GridPane.rowIndex="0"
+              GridPane.columnSpan="12">
             <ImageView fx:id="rocket" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true"/>
             <Button mnemonicParsing="false" id="projectsButton" text="Projects"/>
-            <Button mnemonicParsing="false" id="tasksButton"  text="Tasks" />
-            <Button mnemonicParsing="false" id="usersButton"  text="Users" />
+            <Button mnemonicParsing="false" id="tasksButton" text="Tasks"/>
+            <Button mnemonicParsing="false" id="usersButton" text="Users"/>
         </HBox>
-        <HBox alignment="CENTER_RIGHT"  GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.columnSpan="1">
+        <HBox alignment="CENTER_RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.columnSpan="1">
             <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true"/>
-            <ComboBox fx:id="userActions" prefWidth="150.0" GridPane.columnIndex="1"/>
+            <ComboBox fx:id="userActionsComboBox" prefWidth="150.0" GridPane.columnIndex="1"/>
         </HBox>
-        <Label text="Backlog" GridPane.rowIndex="1" />
-        <Button contentDisplay="CENTER" mnemonicParsing="false" text="Create" GridPane.columnIndex="1" GridPane.rowIndex="1" alignment="BOTTOM_RIGHT"/>
+        <Label text="Backlog" GridPane.rowIndex="1"/>
+        <Button contentDisplay="CENTER" mnemonicParsing="false" text="Create" GridPane.columnIndex="1"
+                GridPane.rowIndex="1" alignment="BOTTOM_RIGHT"/>
         <ScrollPane GridPane.rowIndex="2" GridPane.columnIndex="0" GridPane.columnSpan="1" fitToWidth="true">
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0">
                     <children>
-                        <TableView fx:id="sprint">
-                            <columns>
-                                <TableColumn fx:id="sprintTasksColumn" text="Sprint">
-                                    <cellValueFactory>
-                                        <PropertyValueFactory property="title"/>
-                                    </cellValueFactory>
-                                </TableColumn>
-                            </columns>
-                        </TableView>
+                        <ListView fx:id="sprintTaskListView"/>
                     </children>
                 </AnchorPane>
             </content>
         </ScrollPane>
-        <ScrollPane GridPane.rowIndex="3" GridPane.columnIndex="0" GridPane.columnSpan="1" GridPane.rowSpan="2" fitToWidth="true">
+        <ScrollPane GridPane.rowIndex="3" GridPane.columnIndex="0" GridPane.columnSpan="1" GridPane.rowSpan="2"
+                    fitToWidth="true">
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0">
                     <children>
-                        <TableView fx:id="backlog">
-                            <columns>
-                                <TableColumn fx:id="backlogTasksColumn" text="Backlog">
-                                    <cellValueFactory>
-                                        <PropertyValueFactory property="title"/>
-                                    </cellValueFactory>
-                                </TableColumn>
-                            </columns>
-                        </TableView>
+                        <ListView fx:id="backlogTaskListView"/>
                     </children>
                 </AnchorPane>
             </content>
         </ScrollPane>
-        <ScrollPane GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.rowSpan="2" GridPane.columnSpan="1" fitToWidth="true" fitToHeight="true">
+        <ScrollPane GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.rowSpan="2" GridPane.columnSpan="1"
+                    fitToWidth="true" fitToHeight="true">
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0">
                     <children>
-                        <TableView fx:id="task">
-                            <columns>
-                                <TableColumn fx:id="taskDetails" text="Task"/>
-                            </columns>
-                        </TableView>
+                        <ListView fx:id="taskDetailsListView" prefHeight="200.0" prefWidth="200.0"/>
                     </children>
                 </AnchorPane>
             </content>
